test/valid-not-implemented/56332_array_sum/array_sum.agu
-- Author: 56332, Student Ricardo Sobral

let arraySum (a) : Int[] -> Int =
    let i : Int = 0;
    let acc : Int = 0;
    while i < length(a) do (
        set acc = acc + a[i];
        set i = i + 1
    );
    acc
    
let a : Int[] = new Int[5 | 10];
let _ : Unit = print(arraySum(a))
