test/invalid-syntax/56332_syntax_unexpected_times/56332_syntax_unexpected_times.agu
-- Author: 56332, Student Ricardo Sobral
let x : Int = 10 * * 1  -- Erro sintático: operador inesperado